tests/snapshots/examples_advanced/grade_analyzer.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/grade_analyzer.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/grade_analyzer.flx:24:26
   |
24 |     let (total, count) = fold(scores, (0.0, 0.0), /(acc, x) -> (acc.0 + x, acc.1 + 1.0))
   |                          ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `total`.

  examples/advanced/grade_analyzer.flx:25:5
   |
25 |     total / count
   |     ^^^^^

Hint:
  Define it first: let total = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/grade_analyzer.flx:63:5
   |
63 |     fold(students, {}, /(acc, s) ->
   |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/grade_analyzer.flx:72:9
   |
72 |     len(filter(to_list(Map.values(results)), /r -> r["passed"] == Some(true)))
   |         ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/grade_analyzer.flx:76:9
   |
76 |     len(filter(to_list(Map.values(results)), /r -> r["passed"] == Some(false)))
   |         ^^^^^^

Hint:
  Define it first: let filter = ...;

Found 5 errors.
== stdout ==
<not executed>
